[metadata]
name = herc
version = 0.0.1
author = Higher Expectations for Racine County
author_email = ben.taft@career2cradle.org
description = Python code from Higher Expectations for Racine County
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/higherX4Racine/herc
classifiers =
    Programming Language :: Python :: 3
    replaceWithLicenseType
    Operating System :: OS Independent

[options]
packages = find:

install_requires =
  requests
  importlib; python_version >= "3.0"

[options.packages.find]
where = src
include=
exclude=