[metadata]
name = herc
version = 0.0.1
author = Higher Expectations for Racine County
author_email = ben.taft@career2cradle.org
license = MIT
description = Python code from Higher Expectations for Racine County
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/higherX4Racine/herc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
include=
exclude=